Refactored based on IDE recommendations.